--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,30 @@ body {
 header {
 	background-color: #1da1f2;
 	color: white;
-	width: 100%;
-	text-align: center;
-	padding: 15px;
-	font-size: 1.5rem;
+	min-width: 100vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+
+	.header-main-container {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+
+		.header-title-container {
+			width: 90%;
+		}
+		.theme-toggle {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			width: 10%;
+		}
+	}
 }
 
 .app-body {
